{
    "name": "InputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "8d8a83bf-2965-4e01-ace0-31b7aa183e74",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "2c03d1bc-493e-496d-ac5c-5dd55bfebec2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "99e67bb2-d450-4a9f-b76d-9213711195e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "28c6482a-7646-4910-be6b-adb212f45668",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e121adc5-8dc5-4945-bbd8-7b5c1f7fa9f6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27e0fde5-39b0-4e35-a637-398a270a490b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10c024bd-8dc2-4ce0-bdeb-cb1cfb757a12",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}